@@ -1,4 +1,5 @@
 0.6.0
+Done bracket matching.
 Done docviewer find.
 Changed web search to duckduckgo ( google to agrresive about cookies ).
 Done search forward/backward in doc viewer.
